kubernetes-dashboard/ui/kubernetes-dashboard-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`kubernetes-dashboard.imroc.io`)
    kind: Rule
    services:
    - name: kubernetes-dashboard
      port: 443
      scheme: https
  tls:
    secretName: kubernetes-dashboard-imroc-io-tls
